added source code button to home page

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <script src="scripts/dvd.js"></script> 
     <script src="scripts/load-dvd.js"></script>
 
-    <img src="images/me.png" id="car_image" height="170" draggable="false">
+    <img src="images/me.png" id="car_image" height="180" draggable="false">
     
 
     <div class="home-bottom">
         <div><a class="link" href="popup-pages/whatisthis.html">What is this?</a></div>
         <div>|</div>
-        <div><a class="link" href="url">Idk random</a></div>
+        <div><a class="link" href="https://github.com/alythedev/personal-site" target="_blank">View source code</a></div>
         <div>|</div>
         <div><a class="link" href="popup-pages/contact.html">Contact</a></div>  
     </div>
