updated github contact link

--- a/popup-pages/contact.html
+++ b/popup-pages/contact.html
@@ -54,7 +54,7 @@
                     hack_club
                 </a>
 
-                <a href="https://github.com/6829ASCS" target="_blank" class="button contact-button">
+                <a href="https://github.com/alythedev" target="_blank" class="button contact-button">
                     <img src="../images/github-icon.png" class="contact-button-icon">
                     github
                 </a>
